# keystone

./: README.md
examples/: CMakeLists.txt
examples/attestation/eapp/: attestor.c
examples/sealMLPlargeEnclave/: CMakeLists.txt  main.cpp  sealMLPlargeEnclave_standalone
examples/sealMLPmediumEnclave/: CMakeLists.txt  host.cpp  main.cpp
examples/sealMLPsmallEnclave/: CMakeLists.txt  main.cpp
examples/sealMatrixAddEnclave/: CMakeLists.txt  host.cpp  main.cpp
examples/sealMatrixMulEnclave/: CMakeLists.txt  host.cpp  main.cpp  pseudocode.txt
examples/sealMatrixRotationEnclave/: CMakeLists.txt  main.cpp
examples/sealPointWiseEnclave/: CMakeLists.txt  host.cpp  main.cpp
examples/sealdemoNonEnclave/: CMakeLists.txt  main.cpp
overlays/keystone/configs/: linux64-defconfig  riscv64_generic_defconfig
runtime/call/: syscall.c
sm/plat/generic/: config.mk
sm/src/plugins/: plugins.c
